# EmprendeIA_ods

./: .gitignore  License.txt  README.md  Tablero_ods_EmprendeIA.html  Tablero_ods_EmprendeIA.qmd  _quarto.yml  ai-log.md  index.html  landing.scss  modern.scss  pyproject.toml  requirements.txt
Tablero_ods_EmprendeIA_files/libs/bootstrap/: bootstrap-021b445f00e456159c57aefde343dade.min.css  bootstrap-1cf3ecedecf4730270216de84797ee57.min.css  bootstrap-456c1aff6f49c60d98ec1e9f5ff038c1.min.css  bootstrap-72e4aee3433813e28ae4fd90905b6335.min.css  bootstrap-8c53d2796cbeb873717a62321190a359.min.css
dashboard/: Tablero_ods_EmprendeIA.html  custom.scss  index.qmd  landing.scss
dashboard/Tablero_ods_EmprendeIA_files/libs/bootstrap/: bootstrap-bd8fb56a27023b896d8b6fb57510f110.min.css  bootstrap-d436d5d6fa298cf284c85b9752e96f15.min.css  bootstrap-e39b53bd74363e0d15a1883c7f013da5.min.css
datos/ods1/: 1.1.1.a_sh_es.csv  1.1.1_dc_637_es.csv
datos/ods1/procesados/: lineas_pobreza_1992_2025.csv  pobreza_estados.csv  pobreza_estados_2010_2020.csv  umbral_internacional.csv
datos/ods4/: 4.1.2_dc_1823_es.csv  Educacion_03.xlsx  Educacion_05.xlsx  Educacion_11.xlsx
datos/ods8/: 8.5.1c_sh_es.csv  8.5.2(2)_dc_1808_es.csv  8.5.2(2)_sh_es.csv  Tabulado (1).csv  Tabulado.csv
docs/: index.html
docs/index_files/libs/bootstrap/: bootstrap-4529b06ddb3991d96af22d1d78e9050d.min.css  (+6 more)
notebooks/: 001EmprendeIA_ods.ipynb
scripts/: 00_descargar_geo.py  01_limpieza_ods1_pobreza.py  02_limpieza_ods4_educacion.py  03_limpieza_ods8_empleo.py  post_render.py
(+2 files in other folders)
